[workspace]
members = [
    "deref-map",
    "oot-explorer-demo",
    "oot-explorer-expr",
    "oot-explorer-game-data",
    "oot-explorer-gl",
    "oot-explorer-read",
    "oot-explorer-reflect",
    "oot-explorer-rom",
    "oot-explorer-segment",
    "oot-explorer-vrom",
    "oot-explorer-web",
]
