[package]
name = "oot-explorer-core"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
thiserror = "1.0.22"

[dependencies.scoped-owner]
path = "../scoped-owner"
