[package]
name = "oot-explorer-demo"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
oot-explorer-game-data = { path = "../oot-explorer-game-data" }
oot-explorer-gl = { path = "../oot-explorer-gl" }
oot-explorer-segment = { path = "../oot-explorer-segment" }
oot-explorer-read = { path = "../oot-explorer-read" }
oot-explorer-reflect = { path = "../oot-explorer-reflect" }
oot-explorer-rom = { path = "../oot-explorer-rom" }
oot-explorer-vrom = { path = "../oot-explorer-vrom" }
png = "0.16"
