[package]
name = "oot-explorer-gl"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
num-traits = "0.2"
oot-explorer-core = { path = "../oot-explorer-core" }
oot-explorer-expr = { path = "../oot-explorer-expr" }
scoped-owner = { path = "../scoped-owner" }
thiserror = "1"
