[package]
name = "oot-explorer-gl"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
num-traits = "0.2"
oot-explorer-expr = { path = "../oot-explorer-expr" }
oot-explorer-game-data = { path = "../oot-explorer-game-data" }
oot-explorer-read = { path = "../oot-explorer-read" }
oot-explorer-segment = { path = "../oot-explorer-segment" }
oot-explorer-vrom = { path = "../oot-explorer-vrom" }
thiserror = "1"
