[package]
name = "oot-explorer-segment"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oot-explorer-vrom = { path = "../oot-explorer-vrom" }
thiserror = "1"
