[package]
name = "oot-explorer-web"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13"
console_error_panic_hook = "0.1"
deref-map = { path = "../deref-map" }
js-sys = "0.3"
oot-explorer-core = { path = "../oot-explorer-core" }
oot-explorer-gl = { path = "../oot-explorer-gl" }
scoped-owner = { path = "../scoped-owner" }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.1"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "DomTokenList",
    "ExtTextureFilterAnisotropic",
    "HtmlCanvasElement",
    "HtmlElement",
    "MouseEvent",
    "Node",
    "Text",
    "WebGl2RenderingContext",
    "WebGlSampler",
    "WebGlTexture",
    "Window",
]

[features]
default = []
trace_macros = []
