[package]
name = "oot-explorer-web"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Work around for an error from wasm-pack. Seems that something is emitting mutable globals, but
# then wasm-opt refuses to permit them. This resolved it.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13"
console_error_panic_hook = "0.1"
js-sys = "0.3"
oot-explorer-core = { path = "../oot-explorer-core" }
oot-explorer-gl = { path = "../oot-explorer-gl" }
scoped-owner = { path = "../scoped-owner" }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.1"
wasm-bindgen = "0.2"
 
[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "DomTokenList",
    "ExtTextureFilterAnisotropic",
    "HtmlCanvasElement",
    "HtmlElement",
    "MouseEvent",
    "Node",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "Text",
    "WebGl2RenderingContext",
    "WebGlSampler",
    "WebGlTexture",
    "Window",
]

[features]
default = []
trace_macros = []
